syntax = "proto3";

package iam;

service IamService {
    // User management
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);

    // Permission management
    rpc AddPermission(AddPermissionRequest) returns (AddPermissionResponse);
    rpc RemovePermission(RemovePermissionRequest) returns (RemovePermissionResponse);
    rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);
    rpc UpdateUserPermissions(UpdateUserPermissionsRequest) returns (UpdateUserPermissionsResponse);

    // Permission checking
    rpc CheckPermissions(CheckPermissionsRequest) returns (CheckPermissionsResponse);
}

// Permission definition
message Permission {
    string name = 1;
    uint64 value = 2;
}

// User messages
message User {
    string id = 1;
    string name = 2;
    string email = 3;
    repeated string permissions = 4;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    repeated string permissions = 4;
}

message CreateUserResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

// Permission management messages
message AddPermissionRequest {
    string permission_name = 1;
}

message AddPermissionResponse {
    bool success = 1;
    string message = 2;
    Permission permission = 3;
}

message RemovePermissionRequest {
    string permission_name = 1;
}

message RemovePermissionResponse {
    bool success = 1;
    string message = 2;
}

message ListPermissionsRequest {
}

message ListPermissionsResponse {
    bool success = 1;
    string message = 2;
    repeated Permission permissions = 3;
}

message UpdateUserPermissionsRequest {
    string user_id = 1;
    repeated string permissions = 2;
}

message UpdateUserPermissionsResponse {
    bool success = 1;
    string message = 2;
    User user = 3;
}

// Permission checking messages
message CheckPermissionsRequest {
    string user_id = 1;
    repeated string required_permissions = 2;
}

message CheckPermissionsResponse {
    bool success = 1;
    bool has_permissions = 2;
    string message = 3;
    repeated string missing_permissions = 4;
}